--- a/views/table.html
+++ b/views/table.html
@@ -11,9 +11,9 @@
       <md-card-content>
         <div layout="row">
           <form name="quick">
-            <md-input-container>
+            <md-input-container ng-show="sMin == null && sMax == null && eMin == null && eMax == null">
               <label>Start Position</label>
-              <input  ng-model="sPos" required>
+              <input  ng-model="sPos" ng-required="!sMin">
             </md-input-container>
 
             <md-input-container>
@@ -23,12 +23,12 @@
 
             <md-input-container>
               <label>Reference</label>
-              <input type="text" ng-model="ref" required>
+              <input type="text" ng-model="ref" ng-required="true">
             </md-input-container>
 
             <md-input-container>
               <label>Alternate</label>
-              <input type="text" ng-model="alt" required>
+              <input type="text" ng-model="alt"  ng-required="true">
             </md-input-container>
           </form>
         </div>
@@ -37,22 +37,22 @@
             <form name="detail">
               <md-input-container>
                 <label>Start min</label>
-                <input  ng-model="sMin" >
+                <input  ng-model="sMin" ng-required="!sPos">
               </md-input-container>
 
               <md-input-container>
                 <label>Start Max</label>
-                <input  ng-model="sMax">
+                <input  ng-model="sMax" ng-required="!sPos">
               </md-input-container>
 
               <md-input-container>
                 <label>End min</label>
-                <input  ng-model="eMin" >
+                <input  ng-model="eMin" ng-required="!sPos">
               </md-input-container>
 
               <md-input-container>
                 <label>End Max</label>
-                <input  ng-model="eMax">
+                <input  ng-model="eMax" ng-required="!sPos">
               </md-input-container>
 
               <md-input-container>
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div layout="row">
-        <md-button ng-disabled="quick.$invalid" class="md-raised md-primary" ng-click="query()" >Query</md-button>
+        <md-button ng-disabled="quick.$invalid || detail.$invalid " class="md-raised md-primary" ng-click="query()" >Query</md-button>
         <md-button ng-disabled="false" class="md-raised md-primary" ng-click="ShowHide()">Advanced Parameters</md-button>
         </div>
 
@@ -76,9 +76,12 @@
     </md-card>
 
   <br></br>
-  <md-card>
-    <md-card-content>
-      <table border="1" class=" table table-striped table-bordered table-hover" id="t01" fixed-header style="width:100%; padding:10px;">
+  <md-card >
+    <md-card-content ng-show="warning != null">
+      <span> {{warning}}</span>
+    </md-card-content>
+    <md-card-content ng-show="hits != null">
+      <table border="1" class=" table table-striped table-bordered table-hover" id="t01" fixed-header style="width:100%; padding:10px;"  >
           <thead>
               <tr>
                   <th>Dataset ID</th>
