--- a/modules/website/files/views/table.html
+++ b/modules/website/files/views/table.html
@@ -101,9 +101,9 @@
       <span> {{warning}}</span>
     </md-card-content>
     <md-card-content ng-show="hits != null">
-      <table border="1" class=" table table-striped table-bordered table-hover" id="t01" fixed-header style="width:100%; padding:10px;"  >
+      <table border="1" class=" table table-striped table-bordered table-hover" id="t01" fixed-header>
           <thead>
-              <tr> 
+              <tr>
                   <th title="Dataset or Clade name ">Dataset name</th>
                   <th>Description</th>
                   <th>Variant count</th>
