--- a/modules/website/files/views/table.html
+++ b/modules/website/files/views/table.html
@@ -94,6 +94,12 @@
 
       </md-card-content>
     </md-card>
+    
+    <div  ng-show="loading">
+           <div class="row justify-content-center spinner-container">
+             <div id="spinner"></div>
+           </div>
+    </div>
 
   <br></br>
   <md-card >
