--- a/modules/website/files/views/table.html
+++ b/modules/website/files/views/table.html
@@ -5,37 +5,16 @@
   <md-card>
       <md-card-title>
         <md-card-title-text>
-          <span class="md-headline">Select Parameters</span>
+          <span class="md-headline">Search</span>
         </md-card-title-text>
       </md-card-title>
       <md-card-content>
         <div layout="row">
           <form name="quick">
             <md-input-container ng-show="sMin == null && sMax == null && eMin == null && eMax == null">
-              <label>Start Position</label>
-              <div data-tip="Precise start coordinate position, allele locus (0-based, inclusive).">
-                <input placeholder="8781" ng-model="sPos" ng-required="!sMin">
-              </div>
-            </md-input-container>
-
-            <md-input-container>
-              <label>End position</label>
-              <div data-tip="Precise end coordinate (0-based, exclusive).">
-                <input placeholder="8781" ng-model="ePos">
-              </div>
-            </md-input-container>
-
-            <md-input-container>
-              <label>Reference</label>
-              <div data-tip="Reference bases for this variant (starting from start).">
-                <input  type="text" placeholder="C" ng-model="ref" ng-required="true">
-              </div>
-            </md-input-container>
-
-            <md-input-container>
-              <label>Alternate</label>
-              <div data-tip="The bases that appear instead of the reference bases.">
-                <input type="text" placeholder="T" ng-model="alt"  ng-required="true">
+              <!--<label>Query Position REF>ALT</label>-->
+              <div data-tip="(Start coordinate position) (REF)>(ALT).">
+                <input id="search" placeholder="8781 C>T" ng-model="inputText" ng-required="!sMin" ">
               </div>
             </md-input-container>
           </form>
@@ -43,31 +22,46 @@
         <div ng-show="isVisible">
           <div layout="row">
             <form name="detail">
+
+              <md-input-container>
+                <label>Reference</label>
+                <div data-tip="Reference bases for this variant (starting from start).">
+                  <input  type="text"  ng-model="ref" ng-required="!inputText">
+                </div>
+              </md-input-container>
+
+              <md-input-container>
+                <label>Alternate</label>
+                <div data-tip="The bases that appear instead of the reference bases.">
+                  <input type="text" ng-model="alt"  ng-required="!inputText">
+                </div>
+              </md-input-container>
+
               <md-input-container>
                 <label>Start min</label>
                 <div data-tip="for querying imprecise positions (e.g. identifying all structural variants starting anywhere between startMin <-> startMax, and ending anywhere between endMin <-> endMax">
-                  <input  ng-model="sMin" ng-required="!sPos">
+                  <input  ng-model="sMin" ng-required="!inputText">
                 </div>
               </md-input-container>
 
               <md-input-container>
                 <label>Start Max</label>
                 <div data-tip="Maximum start coordinate">
-                  <input  ng-model="sMax" ng-required="!sPos">
+                  <input  ng-model="sMax" ng-required="!inputText">
                 </div>
               </md-input-container>
 
               <md-input-container>
                 <label>End min</label>
                 <div data-tip="Minimum end coordinate">
-                  <input  ng-model="eMin" ng-required="!sPos">
+                  <input  ng-model="eMin" ng-required="!inputText">
                 </div>
               </md-input-container>
 
               <md-input-container>
                 <label>End Max</label>
                 <div data-tip="Maximum end coordinate">
-                  <input  ng-model="eMax" ng-required="!sPos">
+                  <input  ng-model="eMax" ng-required="!inputText">
                 </div>
               </md-input-container>
 
@@ -90,11 +84,12 @@
         <div layout="row">
         <md-button ng-disabled="quick.$invalid || detail.$invalid " class="md-raised md-primary" ng-click="query()" >Query</md-button>
         <md-button ng-disabled="false" class="md-raised md-primary" ng-click="ShowHide()">Advanced Parameters</md-button>
+        <md-button class="md-raised md-primary" ng-click="refresh()">Reset</md-button>
         </div>
 
       </md-card-content>
     </md-card>
-    
+
     <div  ng-show="loading">
            <div class="row justify-content-center spinner-container">
              <div id="spinner"></div>
@@ -107,31 +102,35 @@
       <span> {{warning}}</span>
     </md-card-content>
     <md-card-content ng-show="hits != null">
-      <table border="1" class=" table table-striped table-bordered table-hover" id="t01" fixed-header>
-          <thead>
-              <tr>
-                  <th title="Dataset or Clade name ">Dataset name</th>
-                  <th>Description</th>
-                  <th>Variant count</th>
-                  <th>Call Count</th>
-                  <th title="Percentage of sample that contains the mutation.">Sample Coverage</th>
-                  <th title="Total number of sample in the dataset.">Sample Count</th>
-                  <th>Frequency</th>
+      <div class="table-responsive">
+        <table border="1" class=" table table-striped table-bordered table-hover" id="t01" fixed-header>
+            <thead>
+                <tr>
+                    <th title="Dataset or Clade name ">Dataset name</th>
+                    <th>Description</th>
+                    <th>Variant count</th>
+                    <th>Call Count</th>
+                    <th title="Percentage of sample that contains the mutation." ng-if="sMin">Sample Coverage</th>
+                    <th title="Total number of sample in the dataset.">Sample Count</th>
+                    <th>Frequency</th>
+                </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="row in hits"   id="sameStrip">
+                <td>{{row.name}}</td>
+                <td>{{row.description}}</td>
+                <td>{{row.variantCount}}</td>
+                <td>{{row.callCount}}</td>
+                <td ng-if="sMin">{{(row.sampleCount/row.totalSampleCount)*100 | number}} %</td>
+                <td>{{row.totalSampleCount}}</td>
+                <td>{{(row.frequency)*100 | number}} %</td>
               </tr>
-          </thead>
-          <tbody>
-            <tr ng-repeat="row in hits"   id="sameStrip">
-              <td>{{row.name}}</td>
-              <td>{{row.description}}</td>
-              <td>{{row.variantCount}}</td>
-              <td>{{row.callCount}}</td>
-              <td>{{(row.sampleCount/row.totalSampleCount)*100 | number}} %</td>
-              <td>{{row.totalSampleCount}}</td>
-              <td>{{(row.frequency)*100 | number}} %</td>
-            </tr>
 
-          </tbody>
-        <table>
-      </md-card-content>
+            </tbody>
+          <table>
+        </div>
+    </md-card-content>
+
+
     </md-card>
 </div>
