--- a/modules/website/files/views/table.html
+++ b/modules/website/files/views/table.html
@@ -14,7 +14,7 @@
             <md-input-container ng-show="sMin == null && sMax == null && eMin == null && eMax == null">
               <!--<label>Query Position REF>ALT</label>-->
               <div data-tip="(Start coordinate position) (REF)>(ALT).">
-                <input id="search" placeholder="8781 C>T" ng-model="inputText" ng-required="!sMin" ">
+                <input id="search" placeholder="8781 C>T" ng-model="inputText" ng-required="!sMin"  ng-keyup="$event.keyCode == 13 && query()"">
               </div>
             </md-input-container>
           </form>
@@ -82,7 +82,7 @@
           </div>
         </div>
         <div layout="row">
-        <md-button ng-disabled="quick.$invalid || detail.$invalid " class="md-raised md-primary" ng-click="query()" >Query</md-button>
+        <md-button ng-disabled="quick.$invalid || detail.$invalid " class="md-raised md-primary"  ng-click="query()" >Query</md-button>
         <md-button ng-disabled="false" class="md-raised md-primary" ng-click="ShowHide()">Advanced Parameters</md-button>
         <md-button class="md-raised md-primary" ng-click="refresh()">Reset</md-button>
         </div>
