--- a/modules/website/files/assets/css/default.css
+++ b/modules/website/files/assets/css/default.css
@@ -1955,13 +1955,12 @@ ul.contact li a.icon-rss:before
 }
 #sBeacon_logo{
 	object-fit: contain;
-	width: 15%;
-	height: 15%;
+	width: 250px;
+	height: 150px;
 	background: #ffffff;
 	display: block;
   margin-left: auto;
   margin-right: auto;
-  padding: 1em 1em 1em 1em;
 }
 /*********************************************************************************/
 /* Header                                                                        */
