--- a/modules/website/files/views/table.html
+++ b/modules/website/files/views/table.html
@@ -14,7 +14,7 @@
             <md-input-container ng-show="sMin == null && sMax == null && eMin == null && eMax == null">
               <!--<label>Query Position REF>ALT</label>-->
               <div data-tip="(Start coordinate position) (REF)>(ALT).">
-                <input id="search" placeholder="8781 C>T" ng-model="inputText" ng-required="!sMin"  ng-keyup="$event.keyCode == 13 && query()"">
+                <input id="search" placeholder="8782 C>T" ng-model="inputText" ng-required="!sMin"  ng-keyup="$event.keyCode == 13 && query()"">
               </div>
             </md-input-container>
           </form>
@@ -139,6 +139,7 @@
                             <th> PhyoP44wayCoV score</th>
                             <th> PhastCons44wayCoV score</th>
                             <th> SIFT score</th>
+                            <th title="Percentage of sample that contains the mutation.">Sample Coverage</th>
                           </tr>
                       </thead>
                       <tbody>
@@ -148,7 +149,7 @@
                             <td> <span ng-if="var.PhyoP44wayCoV_score"> {{var.PhyoP44wayCoV_score }} </span> <span ng-if="!var.PhyoP44wayCoV_score"> - </span></td>
                             <td><span ng-if="var.PhastCons44wayCoV_score"> {{var.PhastCons44wayCoV_score }} </span><span ng-if="!var.PhastCons44wayCoV_score"> - </span></td>
                             <td><span ng-if="var.SIFT_score"> {{var.SIFT_score }} </span><span ng-if="!var.SIFT_score"> - </span></td>
-
+                            <td >{{(var.sampleCount/row.totalSampleCount)*100 | number}} %</td>
                         </tr>
                       </tbody>
                   </table>
