--- a/modules/website/files/views/table.html
+++ b/modules/website/files/views/table.html
@@ -10,6 +10,13 @@
       </md-card-title>
       <md-card-content>
         <div layout="row">
+          <label>Popular Search: </label>
+          <label>&nbsp;&nbsp; <a class="text-primary" ng-href='#' ng-click = "search('D614G')""> D614G </a></label>
+        </div>
+      </md-card-content>
+
+      <md-card-content>
+        <div layout="row">
           <form name="quick">
             <md-input-container ng-show="sMin == null && sMax == null && eMin == null && eMax == null">
               <!--<label>Query Position REF>ALT</label>-->
@@ -22,20 +29,6 @@
         <div ng-show="isVisible">
           <div layout="row">
             <form name="detail">
-
-              <md-input-container>
-                <label>Reference</label>
-                <div data-tip="Reference bases for this variant (starting from start).">
-                  <input  type="text"  ng-model="ref" ng-required="!inputText">
-                </div>
-              </md-input-container>
-
-              <md-input-container>
-                <label>Alternate</label>
-                <div data-tip="The bases that appear instead of the reference bases.">
-                  <input type="text" ng-model="alt"  ng-required="!inputText">
-                </div>
-              </md-input-container>
 
               <md-input-container>
                 <label>Start min</label>
@@ -66,6 +59,20 @@
               </md-input-container>
 
               <md-input-container>
+                <label>Reference</label>
+                <div data-tip="Reference bases for this variant (starting from start).">
+                  <input  type="text"  ng-model="ref" ng-required="!inputText">
+                </div>
+              </md-input-container>
+
+              <md-input-container>
+                <label>Alternate</label>
+                <div data-tip="The bases that appear instead of the reference bases.">
+                  <input type="text" ng-model="alt"  ng-required="!inputText">
+                </div>
+              </md-input-container>
+
+              <md-input-container>
                 <label>Variant Type</label>
                 <div data-tip="The variantType is used to denote e.g. structural variants. Accepted Values 'INS','DUP','DEL','INV'">
                   <input type="text" ng-model="VarType" >
@@ -85,6 +92,7 @@
         <md-button ng-disabled="quick.$invalid || detail.$invalid " class="md-raised md-primary"  ng-click="query()" >Search</md-button>
         <md-button ng-disabled="false" class="md-raised md-primary" ng-click="ShowHide()">Advanced Parameters</md-button>
         <md-button class="md-raised md-primary" ng-click="refresh()">Reset</md-button>
+
         </div>
 
       </md-card-content>
@@ -102,22 +110,78 @@
       <span> {{warning}}</span>
     </md-card-content>
     <md-card-content ng-show="hits != null">
+    <form>
+    <div class="form-search">
+      <div class="input-group">
+        <div class="input-group-addon"><i class="fa fa-search"></i></div>
+        <!--<label>Query Position REF>ALT</label>-->
+        <div data-tip="Quick search in table and subtable (case INsensitive)" >
+          <input  type="text"  placeholder="Search" ng-model="searchText" >
+        </div>
+        </div>
+      </div>
+    </form>
+
+
       <div class="table-responsive-md">
         <table border="1" class=" table table-striped table-bordered table-hover" id="t01" fixed-header>
             <thead>
                 <tr>
                     <th></th>
-                    <th title="Dataset or Clade name ">Dataset name</th>
-                    <th>Description</th>
-                    <th>Variant count</th>
-                    <th>Call Count</th>
-                    <th title="Percentage of sample that contains the mutation." ng-if="sMin">Sample Coverage</th>
-                    <th title="Total number of sample in the dataset.">Sample Count</th>
-                    <th>Frequency</th>
+
+                    <th>
+                    <a href="#" ng-click="sortType = 'name'; sortReverse = !sortReverse">
+                      Dataset name
+                      <span ng-show="sortType == 'name' && !sortReverse" class="fa fa-caret-down"></span>
+                      <span ng-show="sortType == 'name' && sortReverse" class="fa fa-caret-up"></span>
+                      <span ng-show="sortType != 'name'" class="fa fa-sort"></span>
+                    </a><span class="tableTooltip">Dataset or clade name</span></th>
+                    <th>
+                    <a href="#" ng-click="sortType = 'description'; sortReverse = !sortReverse">
+                      Description
+                      <span ng-show="sortType == 'description' && !sortReverse" class="fa fa-caret-down"></span>
+                      <span ng-show="sortType == 'description' && sortReverse" class="fa fa-caret-up"></span>
+                      <span ng-show="sortType != 'description'" class="fa fa-sort"></span>
+                    </a></th>
+                    <th>
+                    <a href="#" ng-click="sortType = 'variantCount'; sortReverse = !sortReverse">
+                      Variant count
+                      <span ng-show="sortType == 'variantCount' && !sortReverse" class="fa fa-caret-down"></span>
+                      <span ng-show="sortType == 'variantCount' && sortReverse" class="fa fa-caret-up"></span>
+                      <span ng-show="sortType != 'variantCount'" class="fa fa-sort"></span>
+                    </a></th>
+                    <th>
+                    <a href="#" ng-click="sortType = 'callCount'; sortReverse = !sortReverse">
+                      Call Count
+                      <span ng-show="sortType == 'callCount' && !sortReverse" class="fa fa-caret-down"></span>
+                      <span ng-show="sortType == 'callCount' && sortReverse" class="fa fa-caret-up"></span>
+                      <span ng-show="sortType != 'callCount'" class="fa fa-sort"></span>
+                    </a></th>
+                    <th ng-show="sMin">
+                    <a href="#" ng-click="sortType = 'sampleCount'; sortReverse = !sortReverse">
+                      Samples
+                      <span ng-show="sortType == 'sampleCount' && !sortReverse" class="fa fa-caret-down"></span>
+                      <span ng-show="sortType == 'sampleCount' && sortReverse" class="fa fa-caret-up"></span>
+                      <span ng-show="sortType != 'sampleCount'" class="fa fa-sort"></span>
+                    </a> <span class="tableTooltip">Samples that contain the mutation.</span></th>
+                    <th>
+                    <a href="#" ng-click="sortType = 'totalSampleCount'; sortReverse = !sortReverse">
+                      Total Samples
+                      <span ng-show="sortType == 'totalSampleCount' && !sortReverse" class="fa fa-caret-down"></span>
+                      <span ng-show="sortType == 'totalSampleCount' && sortReverse" class="fa fa-caret-up"></span>
+                      <span ng-show="sortType != 'totalSampleCount'" class="fa fa-sort"></span>
+                    </a><span class="tableTooltip">Total number of samples in the dataset.</span></th>
+                    <th>
+                    <a href="#" ng-click="sortType = 'frequency'; sortReverse = !sortReverse">
+                      Frequency
+                      <span ng-show="sortType == 'frequency' && !sortReverse" class="fa fa-caret-down"></span>
+                      <span ng-show="sortType == 'frequency' && sortReverse" class="fa fa-caret-up"></span>
+                      <span ng-show="sortType != 'frequency'" class="fa fa-sort"></span>
+                    </a><span class="tableTooltip">Call count / Total Samples</span></th>
                 </tr>
             </thead>
             <tbody>
-              <tr ng-repeat-start="row in hits"  ng-click="main.activeRow = !main.activeRow" id="sameStrip">
+              <tr ng-repeat-start="row in hits | orderBy:sortType:sortReverse | filter:searchText"  ng-click="main.activeRow = !main.activeRow" id="sameStrip">
                 <td>
                   <button ng-if="main.activeRow" >-</button>
                   <button ng-if="!main.activeRow" >+</button>
@@ -126,7 +190,7 @@
                 <td>{{row.description}}</td>
                 <td>{{row.variantCount}}</td>
                 <td>{{row.callCount}}</td>
-                <td ng-if="sMin">{{(row.sampleCount/row.totalSampleCount)*100 | number}} %</td>
+                <td ng-show="sMin">{{row.sampleCount}} </td>
                 <td>{{row.totalSampleCount}}</td>
                 <td>{{(row.frequency)*100 | number}} %</td>
               </tr>
@@ -135,21 +199,59 @@
                   <table border="1" class=" table table-striped table-bordered table-hover" id="t01" fixed-header ng-show="main.activeRow">
                       <thead>
                           <tr>
-                            <th> Variant</th>
-                            <th> PhyoP44wayCoV score</th>
-                            <th> PhastCons44wayCoV score</th>
-                            <th> SIFT score</th>
-                            <th title="Percentage of sample that contains the mutation.">Sample Coverage</th>
+                            <th>
+                            <a href="#" ng-click="subSortType = 'Variant'; subSortReverse = !subSortReverse">
+                               Variant
+                               <span ng-show="subSortType == 'Variant' && !subSortReverse" class="fa fa-caret-down"></span>
+                               <span ng-show="subSortType == 'Variant' && subSortReverse" class="fa fa-caret-up"></span>
+                               <span ng-show="subSortType != 'Variant'" class="fa fa-sort"></span>
+                            </a><span class="tableTooltip">Variants breakdown including IUPAC codes</span></th>
+                            <th>
+                            <a href="#" ng-click="subSortType = 'PhyoP44wayCoV_score'; subSortReverse = !subSortReverse">
+                              PhyoP44wayCoV score
+                              <span ng-show="subSortType == 'PhyoP44wayCoV_score' && !subSortReverse" class="fa fa-caret-down"></span>
+                              <span ng-show="subSortType == 'PhyoP44wayCoV_score' && subSortReverse" class="fa fa-caret-up"></span>
+                              <span ng-show="subSortType != 'PhyoP44wayCoV_score'" class="fa fa-sort"></span>
+                            </a></th>
+                            <th>
+                            <a href="#" ng-click="subSortType = 'PhastCons44wayCoV_score'; subSortReverse = !subSortReverse">
+                              PhastCons44wayCoV score
+                              <span ng-show="subSortType == 'PhastCons44wayCoV_score' && !subSortReverse" class="fa fa-caret-down"></span>
+                              <span ng-show="subSortType == 'PhastCons44wayCoV_score' && subSortReverse" class="fa fa-caret-up"></span>
+                              <span ng-show="subSortType != 'PhastCons44wayCoV_score'" class="fa fa-sort"></span>
+                            </a></th>
+                            <th>
+                            <a href="#" ng-click="subSortType = 'SIFT_score'; subSortReverse = !subSortReverse">
+                              SIFT score
+                              <span ng-show="subSortType == 'SIFT_score' && !subSortReverse" class="fa fa-caret-down"></span>
+                              <span ng-show="subSortType == 'SIFT_score' && subSortReverse" class="fa fa-caret-up"></span>
+                              <span ng-show="subSortType != 'SIFT_score'" class="fa fa-sort"></span>
+                            </a></th>
+                            <th>
+                            <a href="#" ng-click="subSortType = 'sampleCount'; subSortReverse = !subSortReverse">
+                              Samples
+                              <span ng-show="subSortType == 'sampleCount' && !subSortReverse" class="fa fa-caret-down"></span>
+                              <span ng-show="subSortType == 'sampleCount' && subSortReverse" class="fa fa-caret-up"></span>
+                              <span ng-show="subSortType != 'sampleCount'" class="fa fa-sort"></span>
+                            </a><span class="tableTooltip">Samples that contain the mutation.</span></th>
+                            <th>
+                            <a href="#" ng-click="subSortType = 'sampleCount'; subSortReverse = !subSortReverse">
+                              Sample Coverage
+                              <span ng-show="subSortType == 'sampleCount' && !subSortReverse" class="fa fa-caret-down"></span>
+                              <span ng-show="subSortType == 'sampleCount' && subSortReverse" class="fa fa-caret-up"></span>
+                              <span ng-show="subSortType != 'sampleCount'" class="fa fa-sort"></span>
+                            </a><span class="tableTooltip">Percent of total samples that contain the variant</span></th>
                           </tr>
                       </thead>
                       <tbody>
-                        <tr ng-repeat="var in row.info.variants track by $index">
+                        <tr ng-repeat="var in row.info.variants  | orderBy:subSortType:subSortReverse | filter:searchText">
 
                             <td>{{var.Variant}}</td>
                             <td> <span ng-if="var.PhyoP44wayCoV_score"> {{var.PhyoP44wayCoV_score }} </span> <span ng-if="!var.PhyoP44wayCoV_score"> - </span></td>
                             <td><span ng-if="var.PhastCons44wayCoV_score"> {{var.PhastCons44wayCoV_score }} </span><span ng-if="!var.PhastCons44wayCoV_score"> - </span></td>
                             <td><span ng-if="var.SIFT_score"> {{var.SIFT_score }} </span><span ng-if="!var.SIFT_score"> - </span></td>
-                            <td >{{(var.sampleCount/row.totalSampleCount)*100 | number}} %</td>
+                            <td>{{var.sampleCount}} </td>
+                            <td>{{(var.sampleCount/row.totalSampleCount)*100 | number}} %</td>
                         </tr>
                       </tbody>
                   </table>
