--- a/modules/website/files/assets/css/default.css
+++ b/modules/website/files/assets/css/default.css
@@ -1678,9 +1678,20 @@ hr
 	position: relative;
 }
 
+
 #search {
 	width: 200%;
 }
+#searchText {
+	width: 100px;
+	margin-bottom:1em;
+}
+#searchNew {
+	width: 150px;
+	margin-left:4em;
+	margin-bottom:1em;
+}
+
 #popSearch{
 	margin-right: 10px;
 }
