--- a/modules/website/files/views/table.html
+++ b/modules/website/files/views/table.html
@@ -110,17 +110,17 @@
       <span> {{warning}}</span>
     </md-card-content>
     <md-card-content ng-show="hits != null">
-    <form>
+    <!--<form>
     <div class="form-search">
       <div class="input-group">
         <div class="input-group-addon"><i class="fa fa-search"></i></div>
-        <!--<label>Query Position REF>ALT</label>-->
-        <div data-tip="Quick search in table and subtable (case INsensitive)" >
+        <!--<label>Query Position REF>ALT</label>
+        <div data-tip="Quick search in table (case INsensitive)" >
           <input  type="text"  placeholder="Search" ng-model="searchText" >
         </div>
         </div>
       </div>
-    </form>
+    </form>-->
 
 
       <div class="table-responsive-md">
@@ -177,7 +177,7 @@
                       <span ng-show="sortType == 'frequency' && !sortReverse" class="fa fa-caret-down"></span>
                       <span ng-show="sortType == 'frequency' && sortReverse" class="fa fa-caret-up"></span>
                       <span ng-show="sortType != 'frequency'" class="fa fa-sort"></span>
-                    </a><span class="tableTooltip">Call count / Total Samples</span></th>
+                    </a><span class="tableTooltip">Frequency of samples that contain the variant</span></th>
                 </tr>
             </thead>
             <tbody>
@@ -195,8 +195,10 @@
                 <td>{{row.frequency}} %</td>
               </tr>
               <tr ng-show="main.activeRow" ng-repeat-end="">
+
                 <td colspan=7>
-                  <table border="1" class=" table table-striped table-bordered table-hover" id="t01" fixed-header ng-show="main.activeRow">
+
+                  <table border="1" class=" table table-striped table-bordered table-hover" id="t01" fixed-header >
                       <thead>
                           <tr>
                             <th>
@@ -235,16 +237,29 @@
                               <span ng-show="subSortType != 'sampleCount'" class="fa fa-sort"></span>
                             </a><span class="tableTooltip">Samples that contain the mutation.</span></th>
                             <th>
-                            <a href="#" ng-click="subSortType = 'sampleCount'; subSortReverse = !subSortReverse">
+                            <a href="#" ng-click="subSortType = 'frequency'; subSortReverse = !subSortReverse">
                               Sample Frequency
-                              <span ng-show="subSortType == 'sampleCount' && !subSortReverse" class="fa fa-caret-down"></span>
-                              <span ng-show="subSortType == 'sampleCount' && subSortReverse" class="fa fa-caret-up"></span>
-                              <span ng-show="subSortType != 'sampleCount'" class="fa fa-sort"></span>
+                              <span ng-show="subSortType == 'frequency' && !subSortReverse" class="fa fa-caret-down"></span>
+                              <span ng-show="subSortType == 'frequency' && subSortReverse" class="fa fa-caret-up"></span>
+                              <span ng-show="subSortType != 'frequency'" class="fa fa-sort"></span>
                             </a><span class="tableTooltip">Frequency of samples that contain the variant</span></th>
                           </tr>
                       </thead>
+                      <div  class="col-xs-4" id="searchText">
+                        <label for="search">Search:</label>
+                        <input ng-model="subSearch" id="search" class="form-control" placeholder="Filter text">
+                      </div>
+                      <div  class="col-xs-4" id="searchNew">
+                        <label for="search">Items per page:</label>
+                        <input type="number" min="1" max="100" class="form-control" ng-model="usersPerPage  ">
+                      </div>
+                      <br><br>
+
+
+
                       <tbody>
-                        <tr ng-repeat="var in row.info.variants  | orderBy:subSortType:subSortReverse | filter:searchText">
+
+                        <tr dir-paginate="var in row.info.variants  | orderBy:subSortType:subSortReverse | filter:subSearch |itemsPerPage:usersPerPage " pagination-id="row.datasetId"  current-page="currentPage">
 
                             <td>{{var.pos}}</td>
                             <td>{{var.ref}}</td>
@@ -255,13 +270,15 @@
                             <td>{{var.sampleCount}} </td>
                             <td>{{var.frequency}} %</td>
                         </tr>
+
                       </tbody>
+
                   </table>
+                  <center><dir-pagination-controls pagination-id="row.datasetId"> </dir-pagination-controls></center>
                   </td>
               </tr>
-
-
             </tbody>
+
           <table>
         </div>
     </md-card-content>
