--- a/modules/website/files/views/table.html
+++ b/modules/website/files/views/table.html
@@ -21,7 +21,7 @@
             <md-input-container ng-show="sMin == null && sMax == null && eMin == null && eMax == null">
               <!--<label>Query Position REF>ALT</label>-->
               <div data-tip="(Start coordinate position) (REF)>(ALT).">
-                <input id="search" placeholder="8782 C>T" ng-model="inputText" ng-required="!sMin"  ng-keyup="$event.keyCode == 13 && query()"">
+                <input id="search" placeholder="8782 C>T" ng-model="inputText" ng-required="'true'" ng-keyup="$event.keyCode == 13 && query()"">
               </div>
             </md-input-container>
           </form>
@@ -33,35 +33,35 @@
               <md-input-container>
                 <label>Start min</label>
                 <div data-tip="for querying imprecise positions (e.g. identifying all structural variants starting anywhere between startMin <-> startMax, and ending anywhere between endMin <-> endMax">
-                  <input  ng-model="sMin" ng-required="!inputText">
+                  <input  ng-model="sMin" ng-required="'true'">
                 </div>
               </md-input-container>
 
               <md-input-container>
                 <label>Start Max</label>
                 <div data-tip="Maximum start coordinate">
-                  <input  ng-model="sMax" ng-required="!inputText">
+                  <input  ng-model="sMax" ng-required="'true'">
                 </div>
               </md-input-container>
 
               <md-input-container>
                 <label>End min</label>
                 <div data-tip="Minimum end coordinate">
-                  <input  ng-model="eMin" ng-required="!inputText">
+                  <input  ng-model="eMin" ng-required="'true'">
                 </div>
               </md-input-container>
 
               <md-input-container>
                 <label>End Max</label>
                 <div data-tip="Maximum end coordinate">
-                  <input  ng-model="eMax" ng-required="!inputText">
+                  <input  ng-model="eMax" ng-required="'true'">
                 </div>
               </md-input-container>
 
               <md-input-container>
                 <label>Reference</label>
                 <div data-tip="Reference bases for this variant (starting from start).">
-                  <input  type="text"  ng-model="ref" ng-required="!inputText">
+                  <input  type="text"  ng-model="ref" ng-required="'true'">
                 </div>
               </md-input-container>
 
@@ -92,7 +92,7 @@
           </div>
         </div>
         <div layout="row">
-        <md-button ng-disabled="quick.$invalid || detail.$invalid " class="md-raised md-primary"  ng-click="query()" >Search</md-button>
+        <md-button ng-disabled=" quick.$invalid && detail.$invalid " class="md-raised md-primary"  ng-click="query()" >Search</md-button>
         <md-button ng-disabled="false" class="md-raised md-primary" ng-click="ShowHide()">Advanced Parameters</md-button>
         <md-button class="md-raised md-primary" ng-click="refresh()">Reset</md-button>
 
